day-two/service-mesh/testing/httpbin/k8s-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-v1
  labels:
    app: httpbin
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
        - name: httpbin
          image: quay.io/verygoodsecurity/httpbin:0.1.40
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              cpu: "500m"
              memory: 128Mi
            requests:
              cpu: "500m"
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: tmp
          emptyDir: {}
