day-two/service-mesh/testing/httpbin/k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: httpbin
