day-two/service-mesh/testing/httpbin/ossm-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "*"
  gateways:
    - httpbin
  http:
    - match:
        - uri:
            prefix: /status
      route:
        - destination:
            host: httpbin
            subset: v1
